side-bar change

--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -22,7 +22,105 @@
 		</header>
 		<main id="main" role="main">
 			<aside id="sidebar-dashboard">
-					<a href="#">All properties</a>
+				<div class="user-picture">
+						<a href="#" class="image-thumb"><img src="images/user-img.png" width="512" height="512" alt="user-image"></a>
+						<div class="layout">
+							<a href="#" class="user-name">Zain ali</a>
+							<span class="account-type">premium</span>
+						</div>
+				</div>
+				<ul class="accordion">
+					<li class="active">
+						<a href="#" class="opener">This is link 1</a>
+						<ul class="slide">
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" class="opener">This is link 2</a>
+						<ul class="slide">
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" class="opener">This is link 3</a>
+						<ul class="slide">
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" class="opener">This is link 4</a>
+						<ul class="slide">
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" class="opener">This is link 5</a>
+						<ul class="slide">
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" class="opener">This is link 6</a>
+						<ul class="slide">
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+							<li><a href="#">This sub link</a></li>
+						</ul>
+					</li>
+				</ul>
 			</aside>
 			<div class="addPropertyFormContianer">
 				<div class="listing-holder">
@@ -543,6 +641,7 @@
 	<script type="text/javascript" src="js/helper.js" defer></script>
 	<script type="text/javascript" src="js/add-propertyFrom.js" defer></script>
 	<script type="text/javascript" src="js/dashboard.js" defer></script>
+	<script type="text/javascript" src="js/accordion-plugin.js" defer></script>
 	<script type="text/javascript" src="js/jquery.main.js" defer></script>
 </body>
 </html>
