--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -259,6 +259,7 @@
 							</div>
 						</section>
 						<section class="feature-block" id="feature-block">
+							<a class="feature-blockOpener">Click here to see extra feature</a>
 							<strong class="form-heading"><span>extra features</span></strong>
 							<div class="holder">
 								<div class="features-section-holder">
@@ -555,26 +556,6 @@
 										</div>
 									</div>
 									<input type="text" ng-model="form.data.files.sixFile.title" class="picture-name disableInput" placeholder="Title">
-								</li>
-								<li>
-									<div class="file-uploader">
-										<input type="file" ng-model="form.data.files.sevenFile.file" onchange="previewAddPropertyImg(this , '.img-thumb7')" class="upload-img">
-										<div class="image-holder">
-											<img src="#" class="img-thumb7" alt="image Description">
-											<span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
-										</div>
-									</div>
-									<input type="text" ng-model="form.data.files.sevenFile.title" class="picture-name disableInput" placeholder="Title">
-								</li>
-								<li>
-									<div class="file-uploader">
-										<input type="file" ng-model="form.data.files.eightFile.file" onchange="previewAddPropertyImg(this , '.img-thumb8')" class="upload-img">
-										<div class="image-holder">
-											<img src="#" class="img-thumb8" alt="image Description">
-											<span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
-										</div>
-									</div>
-									<input type="text" ng-model="form.data.files.eightFile.title" class="picture-name disableInput" placeholder="Title">
 								</li>
 							</ul>
 						</section>
