--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -18,8 +18,9 @@
 	<!-- main container of all the page elements -->
 	<div id="wrapper">
 		<header id="header">
-			<a href="#" class="logo">Property42</a>
+			<a href="#" class="logo">P<span class="hidden-xs">roperty</span>42</a>
 			<a class="sideBar-opener"><span></span></a>
+			<a href="#" class="logout" title="Logout"><span class="icon-logout"></span> <span class="hidden-xs">Logout</span></a>
 			<a href="#" class="add-property"><span class="hidden-xs">Add a</span> property</a>
 			<div class="searhForm-holder">
 				<a class="form-openerMobile"><span class="icon-search"></span></a>
@@ -64,40 +65,40 @@
 				</ul>
 			</aside>
 			<div class="pages-holder">
-				<div class="property-listing-holder">
+				<!--<div class="property-listing-holder">
 					<div class="listing-cetegories-links">
 						<ul class="navFor-mobile">
 							<li class="active">
 								<span class="tag">For Sale</span>
 								<a class="slide-onMobile-opener">
-									<strong class="active"><span class="icon-flash-activation"></span> active <span class="numbering">999+</span></strong>
+									<strong class="active">active <span class="numbering">999+</span></strong>
 								</a>
 							</li>
 						</ul>
 						<ul class="slide-onMobile">
 							<li class="active-nav">
 								<a href="#">
-									<strong class="active"><span class="icon-flash-activation"></span> active <span class="numbering">999+</span></strong>
+									<strong class="active">active <span class="numbering">999+</span></strong>
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<strong class="pendings"><span class="icon-clock"></span> pendings <span class="numbering">88</span></strong>
+									<strong class="pending">pendings <span class="numbering">88</span></strong>
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<strong class="rejected"><span class="icon-sign"></span> rejected <span class="numbering">2</span></strong>
+									<strong class="rejected">rejected <span class="numbering">2</span></strong>
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<strong class="expired"><span class="icon-exclamation-triangle"></span> expired <span class="numbering">99</span></strong>
+									<strong class="expired">expired <span class="numbering">99</span></strong>
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<strong class="deleted"><span class="icon-trash"></span> deleted <span class="numbering">34</span></strong>
+									<strong class="deleted">deleted <span class="numbering">34</span></strong>
 								</a>
 							</li>
 						</ul>
@@ -186,7 +187,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -222,7 +223,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -258,7 +259,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -294,7 +295,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -330,7 +331,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -366,7 +367,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -402,7 +403,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -438,7 +439,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -474,7 +475,7 @@
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
 										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+										<a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
@@ -498,6 +499,11 @@
 							</ul>
 						</div>
 					</div>
+				</div>-->
+				<div class="addAgency-user">
+					<form class="addAgency-user">
+						<h1>Add a staff member</h1>
+					</form>
 				</div>
 			</div>
 		</main>
