--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -40,8 +40,18 @@
 						</div>
 					</div>
 					<ul class="notifications-links">
-						<li><a href="#" title="Email Alerts"><span class="icon-service-courier"></span></a></li>
-						<li><a href="#" title="Messages Alerts"><span class="icon-facebook-chat-balloons"></span></a></li>
+						<li class="display-badge">
+                            <a href="#" title="Email Alerts">
+                                <span class="icon-service-courier"></span>
+                                <span class="badge">10</span>
+                            </a>
+                        </li>
+						<li class="display-badge">
+                            <a href="#" title="Messages Alerts">
+                                <span class="icon-facebook-chat-balloons"></span>
+                                <span class="badge">99+</span>
+                            </a>
+                        </li>
 					</ul>
 				</div>
 				<div class="form-holder">
@@ -59,8 +69,10 @@
 							<li><a href="#"><span class="icon-rent"></span> for rent <span class="badge small">99</span></a></li>
 						</ul>
 					</li>
+					<li><a href="#"><span class="icon-favourites-filled-star-symbol"></span>favorites<span class="badge">346</span></a></li>
+                    <li><a href="#"><span class="icon-facebook-chat-balloons"></span>Messages<span class="badge">300</span></a></li>
+                    <li><a href="#"><span class="icon-service-courier"></span>Email Alerts<span class="badge">55</span></a></li>
 					<li><a href="#"><span class="icon-user2"></span>My profile</a></li>
-					<li><a href="#"><span class="icon-favourites-filled-star-symbol"></span>favorites</a></li>
                     <li><a href="#"><span class="icon-key"></span>Change Password</a></li>
 				</ul>
 			</aside>
