--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -41,15 +41,15 @@
 					</div>
 					<ul class="notifications-links">
 						<li class="display-badge">
-                            <a href="#" title="Email Alerts">
+                            <a title="Email Alerts">
                                 <span class="icon-service-courier"></span>
-                                <span class="badge">10</span>
+                                <!--<span class="badge">10</span>-->
                             </a>
                         </li>
 						<li class="display-badge">
-                            <a href="#" title="Messages Alerts">
+                            <a  title="Messages Alerts">
                                 <span class="icon-facebook-chat-balloons"></span>
-                                <span class="badge">99+</span>
+                                <!--<span class="badge">99+</span>-->
                             </a>
                         </li>
 					</ul>
