--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -77,44 +77,7 @@
 				</ul>
 			</aside>
 			<div class="pages-holder">
-				<div class="property-listing-holder">
-					<div class="listing-cetegories-links">
-						<ul class="navFor-mobile">
-							<li class="active">
-								<span class="tag">For Sale</span>
-								<a class="slide-onMobile-opener">
-									<strong class="active">active <span class="numbering">999+</span></strong>
-								</a>
-							</li>
-						</ul>
-						<ul class="slide-onMobile">
-							<li class="active-nav">
-								<a href="#">
-									<strong class="active">active <span class="numbering">999+</span></strong>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<strong class="pending">pendings <span class="numbering">88</span></strong>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<strong class="rejected">rejected <span class="numbering">2</span></strong>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<strong class="expired">expired <span class="numbering">99</span></strong>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<strong class="deleted">deleted <span class="numbering">34</span></strong>
-								</a>
-							</li>
-						</ul>
-					</div>
+				<div class="favorite-property-holder">
 					<div class="property-form-table">
 						<div class="property-filter">
 							<form class="by-user-sorting">
@@ -132,37 +95,6 @@
 											<option>8</option>
 											<option>9</option>
 											<option>10</option>
-										</select>
-									</li>
-									<li>
-										<label>listings per page from</label>
-										<select>
-											<option>Zain</option>
-											<option>Nouman</option>
-											<option>Waqas</option>
-											<option>Sajid</option>
-										</select>
-									</li>
-								</ul>
-							</form>
-							<form class="by-id-sorting">
-								<ul>
-									<li>
-										<label>sorty by</label>
-										<select>
-											<option>ID</option>
-											<option>Type</option>
-											<option>Location</option>
-											<option>Price</option>
-											<option>Expiry</option>
-											<option>Views</option>
-										</select>
-									</li>
-									<li>
-										<label>in</label>
-										<select>
-											<option>Descending</option>
-											<option>Ascending</option>
 										</select>
 									</li>
 								</ul>
@@ -199,19 +131,7 @@
 									<div class="t-data by-view">55</div>
 									<div class="t-data">
 										<a class="details opener" title="Details"><span class="icon-notebook"></span></a>
-										<a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-										<a href="#Alert" class="lightbox delete" title="Delete the property"><span class="icon-trash"></span></a>
-										<a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
-										<div class="popup-holder">
-											<div class="lightbox alert-modal" id="Alert">
-												<span class="caution-heading"><span class="icon-warning"></span>Warning</span>
-												<p>Are you sure, you want to delete this property?</p>
-												<ul class="links">
-													<li><a href="#"><span class="icon-trash"></span>Delete this property</a></li>
-													<li><a href="#" class="close">cancle</a></li>
-												</ul>
-											</div>
-										</div>
+										<a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
 									</div>
 									<div class="slide">
 										<div class="two-cols">
